--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "meaning-cloud": "^1.1.10",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.5"
   },
