--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,14 @@
 {
-	'presets': ['@babel/preset-env'],
-	'env': 
-		{ 'test': 
-		{ 'plugins': ['@babel/plugin-transform-modules-commonjs'] 
+	"presets": [
+      ["@babel/preset-env", {
+      "targets": {
+        "node": "10"
+      }
+    }]
+    ],
+	"env": 
+		{ "test": 
+		{ "plugins": ["@babel/plugin-transform-modules-commonjs"] 
 		} 
 	} 
 }
