--- a/package.json
+++ b/package.json
@@ -13,14 +13,14 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "babel-polyfill": "^6.26.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "meaning-cloud": "^1.1.10",
     "node-fetch": "^2.6.0",
-    "webpack": "^4.35.3",
-    "webpack-cli": "^3.3.5"
+    "webpack": "^4.35.3"
   },
   "devDependencies": {
     "@babel/core": "^7.11.1",
@@ -37,6 +37,7 @@
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
     "terser-webpack-plugin": "^4.1.0",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   }
 }
