--- a/.babelrc
+++ b/.babelrc
@@ -1,14 +1,6 @@
 {
-	"presets": [
-      ["@babel/preset-env", {
-      "targets": {
-        "node": "10"
-      }
-    }]
-    ],
-	"env": 
-		{ "test": 
-		{ "plugins": ["@babel/plugin-transform-modules-commonjs"] 
-		} 
-	} 
+    'presets': ['@babel/preset-env'],
+    "plugins": [
+        "@babel/plugin-transform-runtime"
+    ]
 }
